--- a/crates/reinhardt-urls/Cargo.toml
+++ b/crates/reinhardt-urls/Cargo.toml
@@ -17,7 +17,7 @@ serde = { workspace = true }
 futures = { workspace = true }
 reinhardt-views = { workspace = true, features = ["viewsets"] }
 reinhardt-middleware = { workspace = true }
-reinhardt-core = { workspace = true, features = ["exception", "reactive", "types"] }
+reinhardt-core = { workspace = true, features = ["exception", "page", "reactive", "types"] }
 reinhardt-http = { workspace = true }
 reinhardt-di = { workspace = true }
 regex = { workspace = true }
